kubernetes/ingress/ingress.yml
# Ingress Configuration (pour accéder aux services externes)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: reco-movies
spec:
  rules:
    - host: "reco-movies.local"
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000
          - path: "/streamlit"
            pathType: Prefix
            backend:
              service:
                name: streamlit-service
                port:
                  number: 8501
          - path: "/pgadmin"
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
